bynkc/tests/fixtures/positive/31_simple_record/input.karn
commons test {
  type Point = { x: Int, y: Int }

  fn origin() -> Point {
    Point { x: 0, y: 0 }
  }

  fn xOf(p: Point) -> Int {
    p.x
  }
}
