bynkc/tests/fixtures/negative/30_unknown_field/input.karn
commons test {
  type Point = { x: Int, y: Int }

  fn bad(p: Point) -> Int {
    p.z
  }
}
